# backend

./: .editorconfig  .gitignore  docker-compose.yml  pyproject.toml
src/: .flake8  .isort.cfg  codecov.yml  conftest.py  pytest.ini
src/a12n/: apps.py  models.py  views.py
src/a12n/api/: serializers.py
src/a12n/migrations/: 0001_initial.py
src/a12n/tests/api/: tests_whoami.py
src/a12n/tests/functional/: tests_jwt_auth.py
src/app/: .env.ci  celery.py  decorators.py  middleware.py  models.py  pagination.py  permissions.py  settings.py  urls.py  views.py  viewsets.py
src/app/management/commands/: makemessages.py
src/app/test/: __init__.py  api_client.py  disable_test_command_runner.py  redis.py
src/app/tests/unit/: tests_redis.py
